--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,5 @@ version = "0.0.1"
 authors = ["fotcorn <fotcorn@gmail.com>"]
 
 [dependencies]
-rustc-serialize = "0.3.9"
-rust-crypto = "0.2.29"
+rustc-serialize = "*"
+rust-crypto = "*"
