--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,11 @@
 [package]
 name = "rust_crypto_challenges"
-version = "0.0.1"
+version = "1.0.0"
 authors = ["fotcorn <fotcorn@gmail.com>"]
+license = "MIT/Apache-2.0"
+readme = "README.md"
+repository = "https://github.com/fotcorn/rust_crypto_challenges"
+
 
 [dependencies]
 rustc-serialize = "*"
